tests/ui/indexing/index-help.stderr
error[E0277]: vector indices are of type `usize` or ranges of `usize`
  --> $DIR/index-help.rs:3:7
   |
LL |     x[0i32];
   |       ^^^^ vector indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `Index<i32>` is not implemented for `Vec<{integer}>`, which is required by `Vec<{integer}>: Index<_>`
   = help: the trait `Index<I>` is implemented for `Vec<T, A>`
   = note: required for `Vec<{integer}>` to implement `Index<i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
